<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.fragment.wiki.WikiFragment">
    <ImageView
            android:src="@drawable/wiki_heroes"
            android:layout_width="0dp"
            android:id="@+id/fragment_wiki_heroes_image"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fragment_wiki_maps_image"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:focusable="true"/>
    <ImageView
            android:src="@drawable/wiki_maps"
            android:layout_width="0dp"
            android:id="@+id/fragment_wiki_maps_image" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_wiki_heroes_image"
            app:layout_constraintBottom_toTopOf="@+id/fragment_wiki_update_image" android:layout_height="0dp"
            android:scaleType="centerCrop"/>
    <ImageView
            android:src="@drawable/wiki_updates"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/fragment_wiki_update_image" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_wiki_maps_image" android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/wiki_main_heroes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_wiki_heroes_text"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_wiki_maps_image"
            android:textAppearance="@style/TextHeaderWikiMain"/>
    <TextView
            android:text="@string/wiki_main_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_wiki_maps_text"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/fragment_wiki_maps_image"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/fragment_wiki_update_image"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAppearance="@style/TextHeaderWikiMain"/>
    <TextView
            android:text="@string/wiki_main_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_wiki_update_text"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/fragment_wiki_update_image"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextHeaderWikiMain"/>
</androidx.constraintlayout.widget.ConstraintLayout>